gl31-master/src/test/deca/syntax/invalid/sansobjet/false_list_decl.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 10 : Erreur, ',' manquant
//
// Historique:
//    cree le 13/01/2021
{
    int a b;
}
